# umi-data-cleaning-reports

./: .gitignore  CLAUDE.md  README.md  index.html  pyproject.toml
data/: report.json
data/calib/: abs_coord_2000h.json  abs_coord_400h.json  episodes_400h.json
data/vio_review/: manifest.json
data/yaw_review/: manifest.json
egofinger1800h/v1_ported_20260717/: action_threshold.html
sitegen/: __init__.py  build.py  frozen_page.py  html.py  lazy_video.py  nav.py  report_page.py  vio_filter_page.py  yaw_review_page.py
tests/: test_frozen_page.py  test_vio_filter_page.py  test_yaw_review_page.py
tools/: extract_report_data.py
umi400h/v0_study/: funnel.html  index.html  provenance.html  report.html  samples.html  scene_clusters.html  vio_filter.html  yaw_review.html
umi400h/v1_action_review/: action_threshold.html  dedup_clusters.html  funnel.html  index.html  provenance.html  samples.html  scene_clusters.html
umi400h/v1a_dedup_probe/: funnel.html  index.html  provenance.html  report.html  samples.html
umi400h/v2_action_review/: action_threshold.html  dedup_clusters.html  index.html
umi400h/v3_deletion_review/: action_threshold.html  report.html
umi400h/v4_final/: action_threshold.html  dedup_clusters.html  funnel.html  index.html  provenance.html  report.html  samples.html
umi400h/v5_replay_viovisual_study/: action_threshold.html  dedup_clusters.html  funnel.html  index.html  pose_quality.html  provenance.html  report.html  samples.html  scene_clusters.html  vio_visual.html
umi400h/v6_threshold_signoff/: calm_blind.html  replay_tau.html
(+74 files in other folders)
